--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node server.js"
+    "start": "node server.js",
+    "dev": "npm-run-all --parallel watch:server watch:build",
+    "watch:server": "nodemon --exec babel-node server.js",
+    "watch:build": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +31,7 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
