Saving current work state

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-spotify-web-playback": "^0.8.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "spotify-web-api-js": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
