--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.21.0",
+    "eslint-plugin-react": "^7.22.0",
+    "jslint": "^0.12.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "webpack": "^5.24.3",
